# pymanifold

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  api.md  create_mapping.py  example.ipynb  hatch_build.py  pyproject.toml
pymanifold/: __about__.py  __init__.py  endpoints.json
pymanifold/models/: bet.py  bets.py  comment.py  comments.py  get_compatibility_questions.py  get_lovers.py  groups.py  leagues.py  managram.py  managrams.py  market.py  markets.py  me.py  search_markets.py  txns.py  users.py
pymanifold/models/group/: slug__.py
pymanifold/models/group/by_id/: id__.py
pymanifold/models/group/by_id/id_/: markets.py
pymanifold/models/market/: id__.py
pymanifold/models/market/contractId_/: add_bounty.py  add_liquidity.py  answer.py  award_bounty.py  close.py  group.py  resolve.py  sell.py
pymanifold/models/market/id_/: positions.py
pymanifold/models/slug/: slug__.py
pymanifold/models/user/: username__.py
pymanifold/models/user/by_id/: id__.py
pymanifold/models/user/by_id/id_/: lite.py
pymanifold/models/user/username_/: bets.py  lite.py
scripts/: genJsonSchema.ts  make_models.py
tests/: __init__.py
