[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "pymanifold"
dynamic = ["version"]
description = 'Python API for manifold.markets'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "iameskild", email = "eskild.eriksen122@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic",
]

[project.urls]
Documentation = "https://github.com/iameskild/pymanifold#readme"
Issues = "https://github.com/iameskild/pymanifold/issues"
Source = "https://github.com/iameskild/pymanifold"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:pymanifold tests}"

[tool.coverage.run]
source_pkgs = ["pymanifold", "tests"]
branch = true
parallel = true
omit = [
  "pymanifold/__about__.py",
]

[tool.coverage.paths]
pymanifold = ["pymanifold", "*/pymanifold/pymanifold"]
tests = ["tests", "*/pymanifold/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
